fixed line wrap/spacing/width on help-block

--- a/less/_inputs.less
+++ b/less/_inputs.less
@@ -165,7 +165,6 @@
 
   // Hints
   .help-block {
-    position: absolute;
     display: none;
   }
 
